Revision history for Perl-Dist-APPerl
v0.3.0  2023-01-XX
        Added running scripts from APPERL_SCRIPTNAME environment
        variable
        Added setting fallback script to run if argv[0] script
        execution fails, set `default_script` in your config
        Added installing CPAN distributions from tarball or directory
        on disk via "install_modules" in project config.
        full, small, and vista variant configs:
          Removed version from privlib archlib sitelib sitearch
          Updated Cosmopolitan source
          Update Perl source
        Added dbg config: gdb not working for me, YYMV
        Updated docs with new info.

v0.2.1  2022-12-03
        Remove dependency on Env module.

v0.2.0  2022-11-27
        Enable cross-platform builds of `nobuild` configs. Switch
        remaining `mv`, `cp`, `rm` shell commands to use their perl
        equivalents. Add workaround to `apperlm` for running Info-ZIP
        on Windows from APPerl.

v0.1.1  2022-11-17
        Fix 5.10 support and broken pod link, thanks to MJGARDNER
        (GH#1).

v0.1.0  2022-11-13
        Fix issues with Time-HiRes Configure. Update to Cosmopolitan
        Libc v2.2 . Pin Perl version to configs.

v0.0.4  2022-10-15
        Make Actions release binaries executable

v0.0.3  2022-10-14
        Bumped cosmopolitan versions. Add category to apperlm list. Add
        leading '-' support to config parsing to remove items from an
        existing set.

v0.0.2  2022-10-10
        Add small builds to actions, rewrite acknowledgements.

v0.0.1  2022-10-10
        First packaged version, released on an unsuspecting world.