@@ -11,6 +11,7 @@ v0.3.0  2023-01-XX
           Updated Cosmopolitan source
           Update Perl source
         Added dbg config: gdb not working for me, YYMV
+        Better support --ftrace by outputting .com.dbg instead of elf
         Updated docs with new info.
 
 v0.2.1  2022-12-03
